finalizando hero e plans

--- a/index.html
+++ b/index.html
@@ -7,7 +7,51 @@
     <link rel="stylesheet" href="./dist/css/main.css">
 </head>
 <body>
-    <h1>olá</h1>
+    <section class="hero">
+        <div class="hero__content">
+            <h1 class="hero__content__branding">
+                <img src="./dist/images/logo star+.svg" alt="star+">
+            </h1>
+            <h3 class="title--small">
+                Séries, filmes e esportes que você adora.
+            </h3>
+            <button class="button"><strong>Aproveite a oferta combo+</strong></button>
+            <br>
+            <p>
+                <a href="#" class="link--text">Assinar somente o Star+</a>
+            </p>
+        </div>
+    </section>
+    <section class="plans">
+        <h2 class="title--big">Escolha seu plano</h2>
+        <ul class="plans__list">
+            <li class="plans__list__item">
+                    <img src="./dist/images/star+ logo body.png" class="star" alt="Star+">
+                    <strong class="title--small">R$ 40,90/mês*</strong>
+                    <p class="text--big space1">
+                        No Star+ você encontra estreias de filmes, séries e eventos esportivos com a ESPN.
+                    </p>
+                    <button class="button button--secondary">assine agora</button>
+            </li>
+            <li class="plans__list__item">
+                <img src="./dist/images/disney_star_plus_sm.png" alt="Disney+ e Star+">
+                <strong class="title--small">R$ 55,90/mês*</strong>
+                <p class="text--big space">
+                    Assine Disney+ e Star+ juntos. Economize e aproveite agora os dois serviços por um preço único.
+                </p>
+                <button class="button">assine agora</button>
+            </li>
+            <li class="plans__list__item">
+                <img src="./dist/images/star+ logo body.png"  class="star" alt="Star+">
+                <strong class="title--small">R$ 329,90/ano à vista*</strong>
+                <p class="text--big">
+                    Um ano de Star+ por um preço único. Todo o entretenimento e os esportes que você adora, sem limites.
+                </p>
+                <button class="button button--secondary">assine agora</button>
+            </li>
+        </ul>
+        <p class="text--small">*O preço pode variar caso a assinatura seja feita através de outras plataformas.</p>    
+    </section>
     <script src="./src/scripts/main.js"></script>
 </body>
 </html>
