--- a/index.html
+++ b/index.html
@@ -77,7 +77,10 @@
         <div class="shows__series">
             <h2 class="title">O que você vai ver primeiro?</h2>
             <p class="text">Estreias de filmes, clássicos e sagas, suas séries favoritas e lançamentos exclusivos, comédias animadas, produções originais e esportes ao vivo com a ESPN.</p>
-            <img src="./dist/images/star+ body.jpeg" alt="imagens de seriados">
+            <picture>
+                <source media="(max-width: 768px)" srcset= "./dist/images/body_mobile.jpeg"/>
+                <img src="./dist/images/star+ body.jpeg" alt="imagens de seriados">
+            </picture>
         </div>
         <div class="shows__sports">
             <div class="shows__sports__text">
@@ -95,7 +98,10 @@
                 <p class="text--small">The Simpsons ™ & © 2024 20th Century Studios</p>
             </div>
             <div class="shows__simpsons__img">
-                <img src="./dist/images/star+ simpsons.jpeg" alt="simpsons">
+                <picture>
+                    <source media="(max-width: 768px)" srcset= "./dist/images/simpsons_mobile.jpeg"/>
+                    <img src="./dist/images/star+ simpsons.jpeg" alt="simpsons">
+                </picture>
             </div>
         </div>
     </section>
