correção de erros imagens

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="header">
         <div class="header__container">
             <h1>
-                <img class="header__logo" src="./dist/images/logo star+.svg" alt="Star+">
+                <img class="header__logo" src="./dist/images/logo_star.svg" alt="Star+">
             </h1>
             <ul class="header__links">
                 <li class="header__links__item ">
@@ -25,7 +25,7 @@
     <section class="hero">
         <div class="hero__content">
             <h1 class="hero__content__branding">
-                <img src="./dist/images/logo star+.svg" alt="star+">
+                <img src="./dist/images/logo_star.svg" alt="star+">
             </h1>
             <h3 class="title--small">
                 Séries, filmes e esportes que você adora.
@@ -42,7 +42,7 @@
             <ul class="plans__list">
                 <li class="plans__list__item">
                     <div class="card">
-                        <img src="./dist/images/star+ logo body.png" class="star" alt="Star+">
+                        <img src="./dist/images/star+_body.png" class="star" alt="Star+">
                     <strong class="title--small">R$ 40,90/mês*</strong>
                     <p class="text--big">
                         No Star+ você encontra estreias de filmes, séries e eventos esportivos com a ESPN.
@@ -52,7 +52,7 @@
                 </li>
                 <li class="plans__list__item">
                     <div class="card">
-                        <img src="./dist/images/star+ e disney+.png" alt="Disney+ e Star+">
+                        <img src="./dist/images/star+_disney+.png" alt="Disney+ e Star+">
                     <strong class="title--small">R$ 55,90/mês*</strong>
                     <p class="text--big">
                         Assine Disney+ e Star+ juntos. Economize e aproveite agora os dois serviços por um preço único.
@@ -62,7 +62,7 @@
                 </li>
                 <li class="plans__list__item">
                     <div class="card">
-                        <img src="./dist/images/star+ logo body.png"  class="star" alt="Star+">
+                        <img src="./dist/images/star+_body.png"  class="star" alt="Star+">
                     <strong class="title--small">R$ 329,90/ano à vista*</strong>
                     <p class="text--big">
                         Um ano de Star+ por um preço único. Todo o entretenimento e os esportes que você adora, sem limites.
@@ -79,7 +79,7 @@
             <p class="text">Estreias de filmes, clássicos e sagas, suas séries favoritas e lançamentos exclusivos, comédias animadas, produções originais e esportes ao vivo com a ESPN.</p>
             <picture>
                 <source media="(max-width: 768px)" srcset= "./dist/images/body_mobile.jpeg"/>
-                <img src="./dist/images/star+ body.jpeg" alt="imagens de seriados">
+                <img src="./dist/images/star+_body.jpeg" alt="imagens de seriados">
             </picture>
         </div>
         <div class="shows__sports">
@@ -88,7 +88,7 @@
                 <p class="text--big">Os melhores torneios do mundo ao vivo, séries originais, programas e jogos exclusivos.</p>
             </div>
             <div class="shows__sports__img">
-                <img src="./dist/images/star+ body 2.png" alt="simbolos esportivos">
+                <img src="./dist/images/star+_body2.png" alt="simbolos esportivos">
             </div>
         </div>
         <div class="shows__simpsons">
@@ -100,7 +100,7 @@
             <div class="shows__simpsons__img">
                 <picture>
                     <source media="(max-width: 768px)" srcset= "./dist/images/simpsons_mobile.jpeg"/>
-                    <img src="./dist/images/star+ simpsons.jpeg" alt="simpsons">
+                    <img src="./dist/images/star+_simpsons.jpeg" alt="simpsons">
                 </picture>
             </div>
         </div>
@@ -198,7 +198,7 @@
     </section>
     <footer class="footer">
         <div class="footer__container">
-            <img class="footer__logo" src="./dist/images/logo star+.svg" alt="Disney+">
+            <img class="footer__logo" src="./dist/images/logo_star.svg" alt="Disney+">
             <ul class="footer__links">
                 <li class="footer__links__item">
                     <div class="language-selector">
